# mipt-mips

./: .appveyor.yml  .clang-tidy  .codecov.yml  .gitignore  .gitmodules  .lgtm.yml  .travis.yml  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  _config.yml  appveyor.yml  codecov.yml  contributing.md  get-binutils.sh  index.html  index.md  license.md  members.md  members.txt  options.mk  params.json  readme.md  riscv-bitmanip-opcodes
common/: config.h  (+3 more)
simulator/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  build.cmd  buildscript.sh  cmake_install.cmake  compile_commands.json  disasm.cpp  main.cpp  options.mk  perf_sim.cpp  perf_sim.h  project.err  project.html  project.tasks  pvs.sh  simulator.cpp  simulator.h
simulator/Testing/Temporary/: CTestCostData.txt
simulator/bpu/: bp_interface.h  bpentry.h  bpu.h
simulator/bpu/t/: CMakeLists.txt  unit_test.cpp
simulator/bypass/: data_bypass.cpp  data_bypass.h
simulator/core/: perf_instr.h  perf_sim.cpp  perf_sim.h
simulator/core/t/: CMakeLists.txt  unit_test.cpp
simulator/decode/: decode.cpp  decode.h
simulator/execute/: execute.cpp  execute.h
simulator/export/cache/: main.cpp  runner.cpp  runner.h
simulator/export/cache/t/: unit_test.cpp
simulator/export/cen64/: cen64_intf.cpp  cen64_intf.h  cen64_rcp_interrupt_mask.h  cen64_wrapper.cpp  cen64_wrapper.h
simulator/export/gdb/: gdb_interface.cpp  gdb_wrapper.cpp  gdb_wrapper.h  mips-sim-gdb.cmake  sim-main.h  targ-vals.h
simulator/export/gdb/t/: unit_test.cpp
simulator/export/standalone/: main.cpp
simulator/fetch/: fetch.cpp  fetch.h
simulator/func_sim/: alu.h  alu_primitives.h  driver.cpp  driver.h  func_sim.cpp  func_sim.h  instr.h  instr_cache.h  instr_memory.h  isa.h  multiplication.h  operation.h  register.h  rf.h  trap.h  trap_types.cpp  trap_types.def  trap_types.h  trap_types_internal.h
simulator/func_sim/alu/: alu.h  alu_primitives.h  multiplication.h  shifter.h
simulator/func_sim/alu/t/: unit_test.cpp
simulator/func_sim/driver/: driver.cpp  driver.h
simulator/func_sim/mars/: mars_kernel.cpp
simulator/func_sim/rf/: rf.h
simulator/func_sim/syscall/: mars_calls.cpp  mars_calls.h
simulator/func_sim/t/: CMakeLists.txt  alu_test.cpp  unit_test.cpp  unit_test.cpp~
simulator/func_sim/traps/: trap.cpp  trap.def  trap.h
simulator/gdb/: gdb_interface.c  mips-sim-gdb.cmake  sim-main.h  sim_wrapper.cpp  sim_wrapper.h  targ-vals.c
simulator/infra/: arena.h  argv.h  byte.h  endian.h  exception.h  log.cpp  log.h  macro.h  macro_test.cpp  print128.cpp  string_view.h  target.cpp  target.h  trap_types.h  types.h  uint128.h  wide_types.h
simulator/infra/bpucache/: bpucache.cpp  bpucache.h
simulator/infra/bypass/: data_bypass.cpp  data_bypass.h
simulator/infra/cache/: LRUTagCache.h  cache_tag_array.cpp  cache_tag_array.h
simulator/infra/config/: config.cpp  config.h  main_wrapper.cpp  main_wrapper.h  popl.hpp
simulator/infra/elf_parser/: elf_parser.cpp  elf_parser.h
simulator/infra/instrcache/: InstrCache.h  LRUCache.h  instr_cache.h  instr_cache_memory.h
simulator/infra/lru/: LRUCacheInfo.cpp  LRUCacheInfo.h
simulator/infra/memory/: memory.cpp  memory.h
simulator/infra/ports/: module.cpp  module.h  ports.cpp  ports.h  timing.cpp  timing.h
simulator/infra/replacement/: CacheReplacement.cpp  CacheReplacement.h  cache_replacement.cpp  cache_replacement.h  tree.hh
simulator/infra/string/: cow_string.h  string_view.h
simulator/infra/t/: unit_test.cpp
simulator/interface/cen64/: cen64_intf.cpp  cen64_intf.h  cen64_memory.cpp
simulator/interface/gdb/: gdb_interface.cpp  mips-sim-gdb.cmake
simulator/kernel/: base_kernel.h  kernel.cpp  kernel.h  replicant.h
simulator/kernel/mars/: mars_kernel.cpp  mars_kernel.h
simulator/kernel/t/: replicant_test.cpp  unit_test.cpp
simulator/mem/: mem.cpp  mem.h
simulator/memory/: hierarchied_memory.cpp  memory.cpp  memory.h  plain_memory.cpp
simulator/memory/argv_loader/: argv_loader.cpp  argv_loader.h
simulator/memory/cen64/: cen64_memory.cpp  cen64_memory.h  cen64_stub.cpp  cen64_stub.h
simulator/memory/elf/: elf_loader.cpp  elf_loader.h
simulator/memory/t/: check_coherency.cpp  check_coherency.h  unit_test.cpp
simulator/mips/: _instr.h  mips.h  mips_driver.cpp  mips_instr.cpp  mips_instr.cpp~  mips_instr.h  mips_instr.h~  mips_instr_BACKUP_17507.cpp  mips_instr_decode.h  mips_isa.cpp  mips_memory.cpp  mips_memory.h  mips_register.cpp  mips_register.def  mips_register.h  mips_rf.h  mips_traps_def.h  mips_version.cpp  mips_version.h
simulator/mips/mips_register/: mips_register.cpp  mips_register.def  mips_register.h
simulator/mips/t/: CMakeLists.txt  Makefile  mips32_branch_test.cpp  mips32_cp1_test.cpp  mips32_divmult_test.cpp  mips32_memory_test.cpp  mips32_test.cpp  mips32_test.h  mips32_traps_test.cpp  mips64_test.cpp  mips_version_test.cpp  unit_test.cpp  unit_test.cpp~
simulator/modules/: ports_instance.cpp  ports_instance.def  ports_instance.h
simulator/modules/branch/: branch.cpp  branch.h
simulator/modules/core/: perf_instr.h  perf_sim.cpp  perf_sim.h
simulator/modules/decode/: decode.cpp  decode.h
simulator/modules/execute/: execute.cpp  execute.h
simulator/modules/fetch/: fetch.cpp  fetch.h
simulator/modules/mem/: mem.cpp  mem.h
simulator/modules/prediction/: prediction.cpp  prediction.h
simulator/modules/t/: test_instr.h
simulator/modules/writeback/: writeback.cpp  writeback.h
simulator/risc_v/: risc_v.h  riscv_decoder.h  riscv_driver.cpp  riscv_instr.cpp  riscv_instr.h  riscv_isa.cpp
simulator/risc_v/riscv_register/: riscv_register.cpp  riscv_register.def  riscv_register.h  riscv_register_popular.def
simulator/risc_v/t/: riscv32_driver_test.cpp  riscv64_test.cpp  riscv_test_wrapper.h  unit_test.cpp
simulator/syscall/: syscall.cpp  syscall.h
simulator/syscall/t/: unit_test.cpp
simulator/t/: all_mips.out  unit_test.cpp
simulator/tests/: CMakeLists.txt  miss_rate.txt  test.gdb  test_main.cpp  tests.cmake
simulator/tools/: pvs.sh  simfreq.sh  tidy-check.sh
simulator/writeback/: writeback.cpp  writeback.h
(+286 files in other folders)
